# payfeed

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  set-up-connector.sh
migrations/: 20211229161116_add_uuid_extension.down.sql  20211229161116_add_uuid_extension.up.sql  20211229161239_create_users.up.sql  20211229161324_create_payments.down.sql  20211229161324_create_payments.up.sql  20211229161424_create_transfers.down.sql  20211229161424_create_transfers.up.sql
migrations/2021-12-28-165020_create_payments/: down.sql  up.sql
migrations/2021-12-28-170811_create_users/: up.sql
migrations/2021-12-28-170941_create_transfers/: down.sql  up.sql
migrations/2021-12-28-171125_add_foreign_key_constraints/: down.sql  up.sql
migrations/2021-12-28-204729_autogenerate_ids/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  simple_consumer.rs  utils.rs
