[package]
name = "payfeed"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "3"
anyhow = "1.0.52"
env_logger = "0.9.0"
log = "0.4"
rust_decimal = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.4", features = ["runtime-actix-native-tls", "postgres", "all-types"] }
uuid = { version = "0.8", features = ["serde"] }
rdkafka = "^0.11.0"
