[package]
name = "payfeed"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "3"
anyhow = "1.0.52"
chrono  = "0.4"
env_logger = "0.9.0"
futures = "0.3"
log = "0.4"
rdkafka = { version="^0.24.0", features = ["tokio"] }
rust_decimal = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.4", features = ["runtime-actix-native-tls", "postgres", "all-types"] }
tokio = { version = "0.2.6", default-features = false, features = ["rt-core", "rt-util", "io-driver", "tcp", "uds", "udp", "time", "signal", "stream"] }
uuid = { version = "0.8", features = ["serde"] }
